# gitunderstand

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  deploy-diagrams.md  docker-compose.yml  gcp-deployer.md  gitdiagram-gcp-deployment-plan.md  pyproject.toml  repo-analyzer.md  requirements.txt
.github/workflows/: ci.yml  deploy-diagrams.yml  deploy.yml
diagrams/: .env.example  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  pytest.ini  vitest.config.ts
diagrams/backend/: .env.example  pytest.ini  requirements.txt
diagrams/backend/app/: main.py  prompts.py
diagrams/backend/tests/: conftest.py  test_api.py  test_github_service.py  test_health.py  test_sanitize.py
diagrams/src/: auth.ts  env.js
diagrams/src/app/: layout.tsx  page.tsx  providers.tsx
diagrams/src/components/: action-button.tsx  ai-analysis.tsx  ai-chat.tsx  api-key-button.tsx  api-key-dialog.tsx  copy-button.tsx  customization-dropdown.tsx  diagram-section.tsx  digest-results.tsx  file-tree.tsx  footer.tsx  header.tsx  hero.tsx  ingest-form.tsx  loading.tsx  main-card.tsx  mermaid-diagram.tsx  private-repos-dialog.tsx  (+1 more)
diagrams/tests/: conftest.py  smoke_test.py
src/: __init__.py
src/api/: __init__.py  __main__.py  config.py  main.py  middleware.py  models.py  progress.py  query_processor.py  shared.py
src/core/: __init__.py  ai_summary.py  chunking.py  clone.py  config.py  entrypoint.py  formatter.py  ingestion.py  output_formats.py  parser.py  progress.py  token_counting.py
src/storage/: __init__.py  base.py  factory.py  gcs.py  local.py
src/templates/: base.html  index.html  ingest.html
static/js/: ingest.js  main.js
tests/: conftest.py  test_ai_summary.py  test_chunking.py  test_formatter_tree_json.py  test_ingestion.py  test_integration.py  test_output_formats.py  test_parser.py  test_progress.py  test_storage.py  test_token_counting.py
(+49 files in other folders)
